Erdos rewiring removed

--- a/main.tex
+++ b/main.tex
@@ -199,15 +199,15 @@ We then looked at whether connected cells were more likely to be located spatial
 
 \subsection*{Network properties}
 
-For each connectivity graph reconstructed from tadpole tecta, we calculated several standard network properties, and compared them across developmental stages. Also, we used two techniques to see whether our results were statistically unusual. First, we compared network properties of our graphs to that of rewired graphs, in which the distribution of edge weights $w_{ji}$, and the number of non-zero edges adjacent to each node (node degrees) were fixed, but edges were randomly rewired between nodes (a generalization of degree-preserving rewiring, \citealt{maslov2002}). Second, we performed a similar comparison, but randomized node degrees as well, by reassigning existing edges among all possible edges in a graph (full randomization), while still preserving the distribution of edge weights $w_{ji}$. In theory, two different modes of randomization allowed us to ascribe non-randomness of observed network parameters to either non-random degree distribution, or non-randomness of mesoscale graph structure \citep{ansmann2012surrogate}. In practice, for most networks measures we looked at, the non-random degree distribution and the structure of the graph had opposite effects on our measures of interest, making interpretation rather confusing.
+For each connectivity graph reconstructed from tadpole tecta, we calculated several standard network properties, and compared them across developmental stages. We also checked whether our results were statistically unusual for a network of this size, by comparing network properties of our graphs to that of matching randomized graphs \citep{ansmann2012surrogate}. To do so, we randomly rewired edges between nodes, while keeping the distribution of edge weights $w_{ji}$, and the number of non-zero edges adjacent to each node (node degree) fixed, as a generalization of degree-preserving rewiring \citep{maslov2002}. 
 
-The measure of overall connectivity in the graph, named weighted \textbf{network efficiency}, is defined as the average inverse shortest path for any two nodes in the network \citep{latora2001efficiency}. This value is high when there tend to be short paths between any two randomly chosen nodes, and signals can easily propagate within the graph; the value is low when some nodes are located far from each other on a graph (Fig. XXX example). For a connectivity graph, high edge weights represent strong connections, so network efficiency is calculated on inverse weights $R_{ji} = 1/w_{ji}$ \citep{rubinov2010toolbox}. We found that network efficiency (0.004$\pm$0.002 for stage 46, 0.002$\pm$0.002 for stage 49 tadpoles) was slightly lower than expected for either a random network with matching degree distribution ($d$=$-$0.3, paired $p_t$=0.04 and $d$=$-$0.3, paired $p_t$=0.06 for younger and older tadpoles respectively), or a fully randomized network ($d$=$-$0.5 and $-$0.05; paired $p_t$=0.02 and 0.01 for younger and older tadpoles respectively). Efficiency did not  seem to change with age ($d$=$-$0.8, $p_t$=0.06).
+The measure of average "connectedness" in the graph, known as weighted \textbf{network efficiency}, is defined as the average inverse shortest path for any two nodes in the network \citep{latora2001efficiency}. This value is high when there tend to be short paths between any two randomly chosen nodes, and signals can easily propagate within the graph; the value is low when some nodes are located far from each other on a graph (Fig. XXX example). For a connectivity graph, high edge weights represent strong connections, so network efficiency is calculated on inverse weights $R_{ji} = 1/w_{ji}$ \citep{rubinov2010toolbox}. We found that network efficiency (0.004$\pm$0.002 for stage 46, 0.002$\pm$0.002 for stage 49 tadpoles) was slightly lower than expected for a randomized network with matching degree distribution ($d$=$-$0.3, paired $p_t$=0.04 and $d$=$-$0.3, paired $p_t$=0.06 for younger and older tadpoles respectively). Efficiency did not  seem to change with age ($d$=$-$0.8, $p_t$=0.06).
 
-Network \textbf{clustering coefficient} describes the small-scale heterogeneity in the network \citep{fagiolo2007}, and is defined as the relative frequency of two neighboring nodes being a part a triangle with a third node connected to both of them (Fig. XXX example). The value of clustering coefficient in our networks was very small (2.4$\pm$2.5 e-3 for stage 46, 1.5$\pm$1.6 e-3 for stage 49 animals), but slightly larger than expected in a randomly rewired network with same degree distribution ($d=$ 0.5 and 0.6, paired $p_t=$ 0.01 and 0.02 for younger and older animals), and similar to what would be expected for a random graph ($d=$ 0.1 and 0.2; paired $p_t=$ 0.4 and 0.3). This suggests that the observed distribution of degrees made our networks less clustered than a random network, but the assortative arrangement of nodes countered this effect. There was no change in clustering in development ($d$=$-$0.4, $p_t$=0.3, Fig.).
+Network \textbf{clustering coefficient} describes the small-scale heterogeneity in the network \citep{fagiolo2007}, and is defined as the relative frequency of two neighboring nodes being a part a triangle with a third node connected to both of them (Fig. XXX example). The value of clustering coefficient in our networks was very small (2.4$\pm$2.5 e-3 for stage 46, 1.5$\pm$1.6 e-3 for stage 49 animals), but slightly larger than expected in a randomly rewired network with same degree distribution ($d=$ 0.5 and 0.6, paired $p_t=$ 0.01 and 0.02 for younger and older animals). This means that neurons with more than two connections were more likely to form clusters than one would have expected it to happen by chance. There was no change in clustering in development ($d$=$-$0.4, $p_t$=0.3, Fig.).
 
-The network \textbf{modularity} is the most commonly used measure of mesoscale network heterogeneity \citep{leicht2008community,newman2006modularity}. A network with high modularity can be split into a set of sub-networks, with higher density of connections within each sub-network, and weaker connections between sub-networks (Fig. XXX example). In our experiments, reconstructed tectal networks wre slightly more modular than randomly rewired networks ($d=$ 0.2 and 0.3, paired $p_t=$ 0.2 and 0.06, for stages 46 and 49 respectively), but slightly less modular than matching random networks ($d$=$-$0.4 and $-$0.1, paired $p_t =$ 0.04 and 0.8 respectively), which again suggests that structural non-randomness and non-random degree distributions affected modularity in opposite ways, with effects cancelling each other. Network modularity increased in development ($d=$ 1.0, $p_t =$ 0.01), and it is hard to attribute this change to any one factor.
+The network \textbf{modularity} is the most commonly used measure of mesoscale network heterogeneity \citep{leicht2008community,newman2006modularity}. A network with high modularity can be split into a set of sub-networks, with higher density of connections within each sub-network, and weaker connections between sub-networks (Fig. XXX example). In our experiments, reconstructed tectal networks were slightly more modular than randomly rewired networks ($d=$ 0.2 and 0.3, paired $p_t=$ 0.2 and 0.06, for stages 46 and 49 respectively), suggesting a structural non-randomness of network organization. Network modularity increased in development ($d=$ 1.0, $p_t =$ 0.01).
 
-The property of \textbf{hierarchical flow} is a measure \citep{mones2012hierarchy} that we based on the distribution of Katz centrality values \citep{katz1953original,fletcher2018katz} within the network (see below for definitions). Intuitively, flow hierarchy is high when connections between nodes largely point in the same direction, as it happens in layered feed-forward networks, networks with chains of directed edges, or with activity sinks \citep{czegel2015hierarchy}. We hypothesized that a network of dedicated looming detectors may exhibit flow hierarchy, with edges leading from "feeder neurons" to "detector neurons", but the data we observed was inconclusive, as structural non-randomness and the non-randomness of degree distribution affected hierarchical flow coefficients in opposite ways, with two effects cancelling each other. Indeed, observed networks were more hierarchical than randomized networks with matching degrees distribution ($d=$ 1.5 and 1.1, paired $p_t=$ 1e-04 and 1e-03 for younger and older tadpoles respectively), but randomized networks with matching degrees distribution were substantially less hierarchical than fully random networks ($d=-$4.5 and $-$2.6, paired $p_t=$ 4e-8 and 2e-6 respectively). There was no difference in hierarchical flow in development ($d=-$0.3, $p_t=$ 0.4).
+The property of \textbf{hierarchical flow} is a measure \citep{mones2012hierarchy} that we based on the distribution of Katz centrality values \citep{katz1953original,fletcher2018katz} within the network (see below for definitions). Intuitively, flow hierarchy is high when connections between nodes largely point in the same direction, as it happens in layered feed-forward networks, networks with chains of directed edges, or with activity sinks \citep{czegel2015hierarchy}. We hypothesized that a network of dedicated looming detectors may exhibit flow hierarchy, with edges leading from "feeder neurons" to "detector neurons". Indeed, tectal networks were more hierarchical than randomized networks with matching degrees distributions ($d=$ 1.5 and 1.1, paired $p_t=$ 1e-04 and 1e-03 for younger and older tadpoles respectively). There was no difference in hierarchical flow in development ($d=-$0.3, $p_t=$ 0.4).
 
 \subsection*{Selectivity Mechanisms}
 
@@ -215,11 +215,11 @@ Even though the architecture of collision-detecting tectal networks is unknown, 
 
 We first looked whether selective cells receive more incoming connections, compared to non-selective cells \citep{litwin2014assemblies}. We found that in stage 46 tadpoles the \textbf{number of incoming connections} did not correlate with selectivity ($r=$ 0.08$\pm$0.24, $p_{t1}=$ 0.2; individual $r>$0 in 9/14 experiments), but in stage 49 tadpoles the correlation was significant, even if weak ($r=$ 0.07$\pm$0.13, $p_{t1}=$ 0.03; individual $r>$0 in 12/16 experiments), indicating that in older tadpoles selective cells received slightly more inputs, compared to non-selective cells.
 
-% Add back that they didn't get more projections out, in contradiction with [timme2016degree], which is probably because they would be projecting out of the network, and not in?
+% If necessary, we may add back a statement that they didn't get more projections out, in contradiction with [timme2016degree], which is probably because they would be projecting out of the network, and not in?
 
-As a better way to identify information sinks, we calculated \textbf{Katz centrality} measure for each cell in the connectivity graph \citep{katz1953original,fletcher2018katz}. Nodes with high Katz centrality have many paths leading to them, so a spike originating at random within a graph would be more likely to eventually cause activation of these nodes, compared to a node with a low centrality value. We found that graphs from younger tadpoles showed no correlation between Katz centrality and looming selectivity ($r =$ 0.08$\pm$0.25, $p_{t1} =$ 0.25, individual $r>$0 in 8/14 experiments), but in older tadpoles Katz centrality correlated with selectivity ($r=$ 0.08$\pm$0.13, $p_{t1}=$ 0.03; individual $r>$0 in 12/16 experiments).
+As a potentially more relevant way to identify information sinks, we calculated \textbf{Katz centrality} measure for each cell in the connectivity graph \citep{katz1953original,fletcher2018katz}. Nodes with high Katz centrality have many paths leading to them, so a spike originating at random within a graph would be more likely to eventually cause activation of these nodes, compared to a node with a low centrality value. We found that graphs from younger tadpoles showed no correlation between Katz centrality and looming selectivity ($r =$ 0.08$\pm$0.25, $p_{t1} =$ 0.25, individual $r>$0 in 8/14 experiments), but in older tadpoles Katz centrality correlated with selectivity ($r=$ 0.08$\pm$0.13, $p_{t1}=$ 0.03; individual $r>$0 in 12/16 experiments).
 
-As cells with higher Katz centrality tend to be activated more often \citep{fletcher2018katz}, we checked whether cell selectivity for looming stimuli correlated with its \textbf{average activity} during the recording. We found that for both younger and older animals, actively spiking cells tended to have stronger looming selectivity ($r =$ 0.20$\pm$0.24 and 0.14$\pm$0.19 respectively; in both cases $r$ is significantly $>0$, $p_{t1}=$ 0.01 and 0.01). There was no change in this correlation over development ($p_t=$ 0.4).
+As cells with higher Katz centrality tend to be activated more often \citep{fletcher2018katz}, we checked whether cell selectivity for looming stimuli correlated with its \textbf{average activity} during the recording. We found that for both younger and older animals, actively spiking cells tended to have stronger looming selectivity ($r =$ 0.20$\pm$0.24 and 0.14$\pm$0.19 respectively; in both cases $r$ is significantly $>0$, $p_{t1}=$ 0.01 and 0.01), which matches predictions of earlier studies of intrinsic excitability in the tectum \citep{busch2019}. There was no change in this correlation over development ($p_t=$ 0.4).
 
 If looming-selective cells gather information from the network, it was plausible to expect that they would be more likely connected to other selective cells, rather than to non-selective ones. To test this, we looked into the weighted \textbf{assortativity of selectivity} value: a weighted correlation between the selectivity scores of cells connected by edges, with strength of these edges used as weight (see Methods). We found that selectivities of connected cells did not correlate in graphs reconstructed from younger tadpoles ($r$=0.05$\pm$0.12, $p_{t1}$=0.14, individual $r>$0 in 9/14 experiments), but weakly correlated in older tadpoles ($r$=0.05$\pm$0.07, $p_{tq}$=0.01; individual $r>$0 in 11/16 experiments). Together with centrality results, it suggests that the distribution of selective cells in older networks was less random, which may indicate a higher role of distributed calculations in older animals.
 
@@ -233,11 +233,7 @@ We also hypothesized that selectivity for looming stimuli may gradually “accum
 Spatial variability. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
 \end{figure*}
 
-As tectal networks are complex and noisy, it was hard to provide a clear mechanistic interpretation of our experimental results, especially as in some cases we used alternative ways to quantify the same intuition, and found the evidence conflicting. For example, for statistical network properties, the effects of non-Erdos degree distribution and mesoscale graph structure often affected network properties in opposite directions, leading to small total effects. 
-
-%Similarly, when we tried to quantify how “integrative” the position of each cell within the connectivity graph was, only some of these measurements correlated with cell selectivity for looming stimuli, and it was not clear which of these measurements are objectively “better”, in terms of reflecting the true properties of the network.
-
-To compensate for these limitations, and to provide a theoretical counterpoint to our observations, we built a mathematical model of the developing tectum, and ran this model through the same set of measurements that we applied to our experiments. The model consisted of 81 artificial neurons, arranged in a 9$\times$9 grid, and all originally connected to each other (every neuron to every neuron) with random positive (excitatory) synaptic weights (Fig XXX). The model operated in 10 ms increments, and we interpreted the output of each neuron as its instantaneous firing rate. At each time step we looked at the network activity in the previous step, and summed up the inputs each neuron would receive from each other neuron. We then used a sliding logistic function to translate these synaptic inputs into postsynaptic spiking (see “Methods” for details).
+As tectal networks are complex and noisy, it was hard to provide a clear mechanistic interpretation of our experimental results. To compensate for this limitation, and to provide a theoretical counterpoint to our experimental observations, we built a mathematical model of the developing tectum, and ran this model through the same set of measurements that we applied to our experiments. The model consisted of 81 artificial neurons, arranged in a 9$\times$9 grid, and all originally connected to each other (every neuron to every neuron) with random positive (excitatory) synaptic weights (Fig XXX). The model operated in 10 ms increments, and we interpreted the output of each neuron as its instantaneous firing rate. At each time step we looked at the network activity in the previous step, and summed up the inputs each neuron would receive from each other neuron. We then used a sliding logistic function to translate these synaptic inputs into postsynaptic spiking (see “Methods” for details).
 
 To allow the network develop in time, we introduced three simple developmental rules: spike-time-dependent plasticity (STDP), homeostatic plasticity, and synaptic competition. Our implementation of STDP approximated biological STDP, as observed in the tadpole tectum \citep{zhang1998stdp,mu2006stdp}: if two cells were active in two consecutive time frames, and they were connected with a synapse, the weight of this synapse was increased. Conversely, if two cells were active within the same time frame, the weight of a synapse connecting them was decreased, as it means that one cell would try to activate another cell after it had already spiked. The homeostatic plasticity rule adjusted excitability thresholds, trying to keep spiking output of each neuron constant on average \citep{pratt2007intrinsic,turrigiano2011}. The rule of synaptic competition attempted to keep constant the total strength of synaptic inputs to each neuron, as well as the total strength of outputs from each neuron, scaling all synapses of both input and output neurons towards a set target every time there was a change in synaptic efficiency \citep{hamodi2016nmda,cohen2002synreview,munz2014hebbian}.
 
@@ -286,11 +282,11 @@ Disruption of different developmental rules led to very different changes in net
 
 In the first half of this study, we described a way to reconstruct functional connectivity in the tectum of \textit{Xenopus} tadpoles from high-speed Calcium imaging recordings, and used these reconstructions to describe several novel findings about the topology of tectal network. We show that in development, tectal networks tend to become more openwork, approaching a scalefree statistics. We also show that looming-selective cells tend to occupy a special place in this networks: they tend to be located in the middle of the receptive field for a looming stimuli, and tend to serve as "information sinks", collecting more inputs from the rest of the network, compared to non-selective cells (as accessed via both in-degree statistics, and Katz centrality).
 
-In the second part of this paper, we hypothesized that a developing network governed by spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual inputs, would 1) spontaneously acquire selectivity for looming stimuli, and 2) develop a non-random network structure. We also hypothesized that these effects would be robust enough to be replicated in biological experiments. The support for this hypothesis is mixed. The model did develop selectivity for looming stimuli (in terms of both average preference, and distributed stimulus encoding), and this improvement in selectivity was resilient to changes in developmental rules. Yet these seemingly robust results were not truly replicated in biological experiments, as we observed no improvement in looming detection in development, and neither average selectivity, stimulus encoding, nor cell specialization differed between younger and older tadpoles. This was particularly surprising in view of a known improvement in collision detection with tadpole age \citep{dong2009}.
+In the second part of this paper, we hypothesized that a developing network governed by spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual inputs, would 1) spontaneously acquire selectivity for looming stimuli, and 2) develop a non-random network structure. We also hypothesized that these effects would be robust enough to be replicated in biological experiments. The support for this hypothesis is mixed. The model did develop selectivity for looming stimuli (in terms of both average preference, and distributed stimulus encoding), and this improvement in selectivity was resilient to changes in developmental rules. Yet these seemingly robust results were not truly replicated in biological experiments, as we observed no improvement in looming detection over development, and neither average selectivity, stimulus encoding, nor cell specialization differed between younger and older tadpoles. This was particularly surprising in view of a known improvement in collision detection with tadpole age \citep{dong2009}.
 
 The model also developed a non-random network structure, with a scale-free degree distribution, low clustering, and high modularity. Of these predictions, about two thirds were replicated in biological experiments (Table 1, compare columns "Imaging" and "Model / Base"): most notably, changes in network degree distribution, a disappearance of bidirectional connections, and statements related to neuronal ensembles. These matches between the model and the experiments suggest that at the very least, our model captured the nature of networks development under the influence of synaptic competition and spike-time-dependent plasticity (STDP). Synaptic competition promoted connectivity in weakly connected neurons, while "punishing" overconnected cells, which created light-frame, openwork graph structures \citep{fiete2010chains}, while STDP coordinated activity within subnetworks, increasing modularity \citep{stam2010modular,litwin2014assemblies}, similar to how it was previously described for Hebbian plasticity \citep{triplett2018emergence,damicelli2018topomod}. We did not observe changes in the \textit{number} of neuronal ensembles \citep{avitan2017spontaneous,pietri2017emergence}, but we believe that it is only because our experiments were not suited for ensemble detection, as we worked with strong shared inputs that reliably activated almost every neuron in the network. This is very different from a case of spontaneous activity, where different sub-networks get activated randomly, with activity propagating within modules more readily than between them \citep{avitan2017spontaneous}.
 
-At the same time, most model predictions about how network properties are supposed to change in development did not replicate in biological experiments. There are four possible explanations for this discrepancy. First, while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and while retinal inputs to the tectum continue to refine \citep{tao2005refinement, munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In our model, most network measures plateaued, or even slowly reversed late in development, which means that even for a qualitative comparison between the model and the experiment we have to make an assumption about whether stage 46 tadpoles corresponded to a mid-point of development, or whether they fall on the developmental plateau. The absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, compared to younger ones, suggests that both stages fall on the “plateau”. If true, this would mean that less robust collision avoidance in behaving stage 46 tadpoles \citep{dong2009} is likely to be due to maturation of sensorimotor connections from the tectum to the hindbrain, which we did not assess in this study.
+At the same time, most model predictions about how network properties were supposed to change in development did not replicate in biological experiments. There are four possible explanations for this discrepancy. First, while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and while retinal inputs to the tectum continue to refine \citep{tao2005refinement, munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In our model, most network measures plateaued, or even slowly reversed late in development, which means that even for a qualitative comparison between the model and the experiment we have to make a critical assumption about whether stage 46 of tadpole development corresponds to a mid-point of network maturation, or whether it falls on the developmental plateau. The absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, compared to younger ones, suggests that both stages may indeed fall on the “plateau”. If true, this would mean that less robust collision avoidance in behaving stage 46 tadpoles \citep{dong2009} is likely to be due to maturation of sensorimotor projections from the tectum to the hindbrain, which we did not assess in this study.
 
 Second, a poor fit between model predictions and biological experiments may be a consequence of low statistical power of this study. With 14 and 16 networks for each of two developmental stages, we could only hope to detect changes of Cohen $d \approx$ 1.0, assuming $p_t<$ 0.05 threshold and 80\% power. Moreover, based on available imaging studies, we can estimate that at stage 49 tadpoles, one side of a tectum contains about 10-15 thousand neurons, as it is about 40 cells across \citep{hiramoto2009}, and packed 6-10 cells deep in its thickest part \citep{hewapathirane2008vivo}, while tapering towards the edges \citep{bollmann2009}. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network. With a coverage so sparse, our parameter estimations were expected to be noisy, further lowering the power of our tests.
 
@@ -440,7 +436,7 @@ Our definition of \textbf{hierarchical flow} was inspired by \citep{mones2012hie
 
 Each node then further redirected this activation to other nodes. This definition is very close to that of pagerank centrality \citep{page1999pagerank}, with a minor difference that the weights are not normalized to the value of total outgoing weights for each node $i$: that is, we work with raw weights of $w_{ji}$ rather than $w_{ji}/\sum_k{w_{ki}}$. It means that a node with many outputs has a strong influence over network activation, nodes with weak outgoing edges act almost as dead-ends. Similar to a standard pagerank algorithm, we found solution the stable solution of this problem iteratively, by initializing the network with equal values of centrality, and then running the equation above 100 times or until convergence. Once the distribution of centralities $z_i$ stabilized, we used the difference between the maximal Katz centrality and mean centrality across all nodes as a measure of hierarchical flow in the network [ref]: $h = \text{max}(z_i) - \text{mean}(z_i)$.
 
-To check whether network values described above were different from values expected on a random graph, we performed a two-stage \textbf{graph randomization}. First, we randomized each graph using a variant of degree-preserving reshuffling \citep{maslov2002} that we generalized for directed weighted graphs. For a network with $N_E$ edges we picked 3$\cdot N_E$ random pairs of nodes (nodes $i$, $j$, $k$, and $l$) that had strong connections from $i$ to $j$, and from $k$ to $l$, but weak connections or no connections from $i$ to $l$, and from $j$ to $k$ (we required $w_{ji}>w_{li}$ and $w_{lk}>w_{jk}$). We also required all four nodes to be different ($i \neq j \neq k \neq l$). Then we cross-wired these pairs of nodes, gradually randomizing network topology:
+To check whether network values described above were different from values expected on a random graph, we performed \textbf{graph randomization}, using a variant of degree-preserving reshuffling \citep{maslov2002} that we generalized for directed weighted graphs. For a network with $N_E$ edges we picked 3$\cdot N_E$ random pairs of nodes (nodes $i$, $j$, $k$, and $l$) that had strong connections from $i$ to $j$, and from $k$ to $l$, but weak connections or no connections from $i$ to $l$, and from $j$ to $k$ (we required $w_{ji}>w_{li}$ and $w_{lk}>w_{jk}$). We also required all four nodes to be different ($i \neq j \neq k \neq l$). Then we cross-wired these pairs of nodes, gradually randomizing network topology:
 
 \[ \left \{ \begin{array}{l}  
 w_{ji} \leftarrow w_{li} \\ 
@@ -451,9 +447,7 @@ w_{jk} \leftarrow w_{lk}
 
 This approach to degree-preserving randomization is slightly different from the original formulation by \citep{maslov2002} in two ways. First, we explicitly don’t allow loops (self-edges) by requiring all four nodes be different. Second, we allow nodes $i$ and $k$, as well as $l$ and $j$ to be connected before the rewiring, and just swap corresponding edge weights, which seems to be a necessary adjustment for directed weighted graphs. It also means that, strictly speaking, for a weighted graph, our randomization only preserves out-degrees, but not in-degrees. Because of the requirement that $w_{ji}>w_{li}$ and $w_{lk}>w_{jk}$, for a binary directed graph our algorithm preserves in-degrees strictly, as it becomes identical to version by Maslov, while for nearly-binary graphs (bimodal or sparse), it tends to preserve in-degrees on average.
 
-Then, at the next step, we completely randomized connections by randomly swapping weights of edges $w_{ji}$ and $w_{lk}$, including zero weighs, which disrupted both in- and out-degree distributions, and led to a random Erd\H{o}s graph with the same distribution of edge weights as in the original graph. We then compared original network measures (on the actually observed graph) to those calculated on degree-preserving rewired graphs (averaged across 20-50 rewirings), and to those calculated on fully rewired graphs (averaged across same number of rewirings). This allowed us too differentiate between the effects of graph structure, and non-random degree distribution.
-
-We also tested whether the connectivity and position of selective cells within the graph is in any way peculiar, by calculating Pearson correlations between cell selectivity and several different graph centrality measurements. Here, we used three centrality measures: weighted in-degree (the sum of weights of all connections to the node); Katz centrality; and clustering coefficient.
+We also tested whether the connectivity and positioning of selective cells within the graph is in any way peculiar, by calculating Pearson correlations between cell selectivity and several different graph centrality measurements. Here, we used three centrality measures: weighted in-degree (the sum of weights of all connections to the node); Katz centrality; and clustering coefficient.
 
 To study the distribution of cell selectivity within the graph, we used \textbf{weighted assortativity} as a measure of non-random association of selective cells into subnetworks. The formula for a mixing coefficient in a weighted directed network is given in \citep{farine2014weighted}, based on the logic from \citep{newman2003mixing} and \citep{leung2007weighted}. The original formula from \citep{newman2003mixing} for an unweighted undirected graph defines a mixing coefficient as a Pearson correlation coefficient between properties of nodes connected by edges, taken over all edges in the graph:
 
@@ -483,7 +477,7 @@ with $\bar{a}$ and $\bar{b}$ representing weighted mean values:
 
 Note that this definition seems to differ slightly from the one used in the Brain Connectivity Toolbox \citep{rubinov2010toolbox}.
 
-\textbf{Unreported analyses}. For the sake of transparency, here we report the list of measures that were calculated, but were not interpreted, and not included in the final manuscript: four measures of weighted directed degree assortativity (in-in, in-out, out-in, and out-out); pagerank centrality; Katz centrality on reversed graph $W'$; hierarchical flow for reversed graph; node reach on direct and reversed graphs (unweighted analog of Katz centrality without attenuation); two alternative measure of cell selectivity: McFadden’s pseudo-$R$ for a logistic fit of stimulus identity to the total response of each cell, and a set of selectivity measures calculated on peak amplitudes instead of cumulative amplitudes (the results of both calculations were not qualitatively different). We also made several attempts to estimate the prevalence of directed cycles in our networks, but decided that these measures require too much validation to be included in this manuscript.
+\textbf{Unreported analyses}. For the sake of transparency, here we report the list of measures that were calculated, but were not included in the final manuscript for being superflous or confusing: four measures of weighted directed degree assortativity (in-in, in-out, out-in, and out-out); pagerank centrality; Katz centrality on reversed graphs $W^\top$; hierarchical flow for reversed graphs; node reach on direct and reversed graphs (unweighted analog of Katz centrality without attenuation); two alternative measures of cell selectivity: McFadden’s pseudo-$R$ for a logistic fit of stimulus identity to the total response of each cell, and a set of selectivity measures calculated on peak amplitudes instead of cumulative amplitudes (the results of both calculations were not qualitatively different to those reported in the paper). We also made several attempts to estimate the prevalence of directed cycles in our networks, but decided that these measures require too much validation to be included in this manuscript. For network analysis, we also attempted to compare rewired graphs to matching random Erdos graphs, but failed to build a good generalization for a case of weighted directed graphs with an adaptive edge detection threshold.
 
 \subsection*{Developmental Model}
 
